# WIMU

./: .gitignore  README.md  pyproject.toml  results.md
generatingSpectograms/: README.md  generate_spectrogram.py  proj1.py  pyproject.toml  random_mido_midi.mid  script.py  spectrogram_gen_notebook.ipynb
generatingSpectograms/crp_dataset/: crp_annotation.csv
tests/: __init__.py  notebook_test.ipynb
wimu/: concept_propagation_tests.ipynb  eval_model.py  experiments.ipynb  gtzan_classification.py  gtzan_notebook.ipynb  gtzan_spectrograms_classification.ipynb  model.py  model400x400.pt  model_v1.0  model_v1.0_30epochs  multilabel.ipynb  train_model.py
