[tool.poetry]
name = "wimu"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.2"
torch = "^2.5.0"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
torchaudio = "^2.5.0"
flake8 = "^7.1.1"
black = "^24.10.0"
mido = "^1.3.3"
pyfluidsynth = "^1.3.3"
ipython = "^8.29.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
