[tool.poetry]
name = "generatingspectograms"
version = "0.1.0"
description = "a module for generating the spectrogram dataset"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"
librosa = "^0.10.2.post1"
mido = "^1.3.3"
matplotlib = "^3.9.2"
numpy = "1.x"
soundfile = "^0.12.1"
argparse = "^1.4.0"
pyfluidsynth = "^1.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
